--- a/.github/workflows/testFile.yaml
+++ b/.github/workflows/testFile.yaml
@@ -19,7 +19,9 @@ jobs:
         run: python -m pip install requests
         
       - name: Install random
-        run: python -m pip install random        
+        run: python -m pip install random  
+        with:
+          python-version: 3.6
 
       - name: Test with unittest
         run: |
