--- a/.github/workflows/testFile.yaml
+++ b/.github/workflows/testFile.yaml
@@ -19,9 +19,7 @@ jobs:
         run: python -m pip install requests
         
       - name: Install random
-        run: python -m pip install random  
-        with:
-          python-version: 3.6
+        run: python3 -m pip install random  
 
       - name: Test with unittest
         run: |
