--- a/.github/workflows/testFile.yaml
+++ b/.github/workflows/testFile.yaml
@@ -19,7 +19,7 @@ jobs:
         run: python -m pip install requests
         
       - name: Install random
-        run: python3 -m pip install random  
+        run: python -m pip3 install random  
 
       - name: Test with unittest
         run: |
