--- a/.github/workflows/testFile.yaml
+++ b/.github/workflows/testFile.yaml
@@ -16,7 +16,10 @@ jobs:
         run: python -m pip install --upgrade pip pytest
    
       - name: Install requests module
-        run: python -m pip install requests  
+        run: python -m pip install requests 
+        
+      - name: Install requests random module
+        run: python -m pip install random 
 
       - name: Test with unittest
         run: |
